--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-screens": "^3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
