--- a/package.json
+++ b/package.json
@@ -12,18 +12,26 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^5.11.11",
-    "@react-navigation/native": "^5.9.4",
+    "@react-native-firebase/app": "^12.7.2",
+    "@react-native-firebase/auth": "^12.7.4",
+    "@react-native-firebase/messaging": "^12.7.2",
+    "@react-navigation/bottom-tabs": "^5.11.15",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "react": "17.0.1",
+    "react-content-loader": "^6.0.3",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-get-location": "^2.1.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
@@ -35,7 +43,12 @@
     "@babel/runtime": "^7.14.6",
     "@react-native-community/eslint-config": "^3.0.0",
     "babel-jest": "^27.0.5",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.5",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-test-renderer": "17.0.1"
